# v-flow

./: .gitignore  package.json  vite.config.ts
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: GeekPlayer.tsx
src/store/: useVideoStore.ts
