[package]
name = "v-flow" 
version = "0.1.0"
edition = "2021"

[lib]
name = "v_flow_lib"
path = "src/lib.rs"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
# 核心修复：必须开启 protocol-asset，否则视频协议服务器会拒绝连接
tauri = { version = "2.0.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri-plugin-dialog = "2.0.0"
tauri-plugin-fs = "2.0.0"
tauri-plugin-opener = "2.0.0"
tauri-plugin-shell = "2.0.0"
