[package]
name = "v-flow" 
version = "0.1.0"
edition = "2021"

[lib]
name = "v_flow_lib"
path = "src/lib.rs"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri-plugin-dialog = "2.0.0"
tauri-plugin-fs = "2.0.0"
tauri-plugin-opener = "2.0.0"
tauri-plugin-shell = "2.0.0"

axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["fs", "cors"] }
# 核心修复：开启 util 特性以支持 oneshot 方法
tower = { version = "0.4", features = ["util"] }